(executable
  (modes byte exe)
  (name gen_lifecycle)
  (public_name gen_lifecycle)
  (package xapi-datamodel)
  (modules gen_lifecycle)
  (libraries
    dune-build-info
  )
  (promote (until-clean))
 )

; use the binary promoted file from the source dir (not the build dir) that has
; the correct version number embedded
(rule
 (deps gen_lifecycle.exe)
 (action (with-stdout-to datamodel_lifecycle.ml.generated (system %{project_root}/gen_lifecycle.exe))))
